Add paddle to screen

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Gong | Adam Jubert</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
   <body>
     <canvas></canvas>
