--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
   <body>
+    <!-- <h1>Gong</h1> -->
     <canvas></canvas>
-
+    
+    <script type="application/javascript" src="vendor/keymaster.js"></script>
     <script type="application/javascript" src="lib/bundle.js"></script>
   </body>
 </html>
