--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8">
     <title>Gong | Adam Jubert</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <script src="lib/jquery-3.1.1.min.js"> </script>
   </head>
   <body>
-    <!-- <h1>Gong</h1> -->
-    <canvas></canvas>
-    
+    <!-- <h1>Gong</h1>
+    <p>by <a href="http://adamjubert.com" target="_blank">Adam Jubert</a></p> -->
+    <div class="wrapper">
+      <canvas></canvas>
+      <div class="new-game"></div>
+      <div class="game-over"></div>
+    </div>
+
     <script type="application/javascript" src="vendor/keymaster.js"></script>
     <script type="application/javascript" src="lib/bundle.js"></script>
   </body>
