Add lose/win menus and fix timer

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <p>by <a href="http://adamjubert.com" target="_blank">Adam Jubert</a></p> -->
     <div class="wrapper">
       <canvas></canvas>
-      <div class="new-game"></div>
-      <div class="game-over"></div>
+      <div class="alert-screen"></div>
     </div>
 
     <script type="application/javascript" src="vendor/keymaster.js"></script>
