--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Gong | Adam Jubert</title>
+    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script src="lib/jquery-3.1.1.min.js"> </script>
   </head>
@@ -12,13 +13,28 @@
       Your browser does not support the audio element.
 
     </audio>
-    <!-- <h1>Gong</h1>
-    <p>by <a href="http://adamjubert.com" target="_blank">Adam Jubert</a></p> -->
+    <h1>Gong</h1>
+    <p>by <a href="http://adamjubert.com" target="_blank">Adam Jubert</a></p>
     <div class="wrapper">
       <canvas></canvas>
       <div class="alert-screen"></div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase-app.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase-database.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyC7aTjQHH9a9p1iQT96Xua837KJ4t2Aboc",
+        authDomain: "gong-34d06.firebaseapp.com",
+        databaseURL: "https://gong-34d06.firebaseio.com",
+        storageBucket: "gong-34d06.appspot.com",
+        messagingSenderId: "77466642516"
+      };
+      firebase.initializeApp(config);
+      var database = firebase.database();
+    </script>
     <script type="application/javascript" src="vendor/keymaster.js"></script>
     <script type="application/javascript" src="lib/bundle.js"></script>
   </body>
