--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
     <script src="lib/jquery-3.1.1.min.js"> </script>
   </head>
   <body>
-    <audio id="gong-hard">
-      <source src="audio/gong-hard.mp3" type="audio/mp3">
-      Your browser does not support the audio element.
-
-    </audio>
-    <h1>Gong</h1>
+    <h1>Breakdown</h1>
     <p>by <a href="http://adamjubert.com" target="_blank">Adam Jubert</a></p>
     <div class="wrapper">
       <canvas></canvas>
