--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Gong | Adam Jubert</title>
+    <title>Breakdown | Adam Jubert</title>
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script src="lib/jquery-3.1.1.min.js"> </script>
