Change power ups and imgs

--- a/index.html
+++ b/index.html
@@ -15,15 +15,21 @@
     <div class="wrapper">
       <canvas></canvas>
       <div class="alert-screen">
+        <div class="your-score"></div>
         <h2>High Score</h2>
         <p class="high-score"></p>
-        <h2>Instructions</h2>
+        <h2>Controls</h2>
         <ul>
-          <li>Arrow keys move paddle left/right</li>
-          <li>You lose when you run out of time</li>
-          <li>Unlimited lives</li>
+          <li> left screen: A & D </li>
+          <li>right screen: Up & Down </li>
+          <li>mute sound: Q</li>
         </ul>
-        <div class='btn btn-play'>Play Game</div>
+        <h2>Power Ups</h2>
+        <ul>
+          <li><img src="img/star_blue.png" /> big paddle</li>
+          <li><img src="img/star.png" /> remove bricks</li>
+        </ul>
+        <div class="btn btn-play">Play Game</div>
       </div>
     </div>
 
