--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="utf-8">
     <title>Breakdown | Adam Jubert</title>
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <script src="lib/jquery-3.1.1.min.js"> </script>
   </head>
   <body>
     <div class="header">
       <h1>Breakdown</h1>
-      <p>by <a href="http://adamjubert.com" target="_blank">Adam Jubert</a></p>
+      <p>by
+        <a href="http://adamjubert.com" target="_blank">Adam Jubert</a>
+      </p>
     </div>
     <div class="wrapper">
       <canvas></canvas>
-
+    </div>
+    <div class="icons">
+      <a href="http://adamjubert.com" target="_blank"><i class="fa fa-laptop" aria-hidden="true"></i></a>
+      <a href="https://github.com/adamjubert/breakdown" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase-app.js"></script>
