--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Breakdown | Adam Jubert</title>
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
@@ -21,6 +22,7 @@
     <div class="icons">
       <a href="http://adamjubert.com" target="_blank"><i class="fa fa-laptop" aria-hidden="true"></i></a>
       <a href="https://github.com/adamjubert/breakdown" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+      <a href="https://linkedin.com/in/adamjubert" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase-app.js"></script>
